Bug 389045 - render export does not work if the frame range doesnt start with 0
Summary: render export does not work if the frame range doesnt start with 0
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 3.3.3
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-16 11:14 UTC by Bollebib
Modified: 2018-05-23 09:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
(GDB report) (4.27 KB, text/plain)
2018-01-16 11:24 UTC, mvowada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bollebib 2018-01-16 11:14:01 UTC
in render export options set start of range to 100 and end of range to 200 and it the export will fail. Maybe a communication or initialisation issue with FFMPeg?
Comment 1 mvowada 2018-01-16 11:24:52 UTC
Created attachment 109906 [details]
(GDB report)

Confirming, I get signal SIGFPE, Arithmetic exception (see GDB report)
Comment 2 mvowada 2018-01-16 11:26:24 UTC
(checked on Ubuntu 14.04 with Krita 4.0.0-beta1.1.appimage)
Comment 3 Halla Rempt 2018-05-18 13:28:33 UTC
Git commit 10e9c86a45b33e5ed14dd4881730ef586315569e by Boudewijn Rempt.
Committed on 18/05/2018 at 13:28.
Pushed by rempt into branch 'master'.

Fix inconsistent frame numbering when calling FFMPEG

M  +1    -1    libs/ui/KisAsyncAnimationFramesSavingRenderer.cpp
M  +1    -1    libs/ui/dialogs/KisAsyncAnimationRenderDialogBase.cpp
M  +5    -1    plugins/impex/video/video_saver.cpp

https://commits.kde.org/krita/10e9c86a45b33e5ed14dd4881730ef586315569e
Comment 4 Halla Rempt 2018-05-23 09:56:47 UTC
Git commit f4ab9e91983ae505d18ae152f7e8d5600f1c8a08 by Boudewijn Rempt.
Committed on 23/05/2018 at 09:32.
Pushed by rempt into branch 'krita/4.0'.

Fix inconsistent frame numbering when calling FFMPEG
(cherry picked from commit 10e9c86a45b33e5ed14dd4881730ef586315569e)

M  +1    -1    libs/ui/KisAsyncAnimationFramesSavingRenderer.cpp
M  +1    -1    libs/ui/dialogs/KisAsyncAnimationRenderDialogBase.cpp
M  +5    -1    plugins/impex/video/video_saver.cpp

https://commits.kde.org/krita/f4ab9e91983ae505d18ae152f7e8d5600f1c8a08