Fix inconsistent frame numbering when calling FFMPEG

BUG: 389045