libs/ui/KisAsyncAnimationFramesSavingRenderer.cpp
@@ -104,7 +104,7 @@ void KisAsyncAnimationFramesSavingRenderer::frameCompletedCallback(int frame)
     KisImportExportFilter::ConversionStatus status = KisImportExportFilter::OK;
 
     for (int i = range.start(); i <= range.end(); i++) {
-        QString frameNumber = QString("%1").arg(i - m_d->range.start() + m_d->sequenceNumberingOffset, 4, 10, QChar('0'));
+        QString frameNumber = QString("%1").arg(i + m_d->sequenceNumberingOffset, 4, 10, QChar('0'));
         QString filename = m_d->filenamePrefix + frameNumber + m_d->filenameSuffix;
 
         if (!m_d->savingDoc->exportDocumentSync(QUrl::fromLocalFile(filename), m_d->outputMimeType, m_d->exportConfiguration)) {
